# agent-hypervisor

./: .gitignore  .python-version  AGENTS.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONCEPT.md  CONTRIBUTING.md  Dockerfile  MEMORY.md  NEXT_TASKS.md  PROJECT_TASKS.md  README.md  README_PROPOSED.md  ROADMAP.md  STATUS.md  THREAT_MODEL.md  TRANSPARENT_UI.md  VERIFICATION_PLAN.md  WORLD_AUTHORING.md  agent_stub.py  conftest.py  demo_scenarios.py  docker-compose.yml  gateway_config.yaml  hypervisor.py  index.html  policy.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
agentdojo-bench/: README.md  monitor.py  requirements.txt  run_benchmark.py
benchmarks/: runner.py
browser-demo/: .env.example  README.md
browser-extension-demo/: README.md  package-lock.json  package.json  tsconfig.json
demo_data/: malicious_api_doc.txt  malicious_doc.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGNOSIS.md  CONCEPT.md  EVALUATION_FRAMEWORK.md  GLOSSARY.md  INDEX.md  README.md  REFERENCES.md  TECHNICAL_SPEC.md  WHITEPAPER.md  WORKAROUNDS.md  architecture.md  comparative-playground.md  copilot_git_governance.md  demo-scenarios.md  execution_governance_diagram.md  gateway_architecture.md  integrations.md  limitations.md  operator-surface.md  program-lifecycle.md  program-world-compatibility.md  program_layer.md  quickstart.md  repo-consolidation-audit.md  repo-structure.md  roadmap.md  threat_model.md
examples/: README.md  comparative_playground_demo.py  operator_surface_demo.py  poisoned_tool_output_demo.py  program_review_demo.py  program_world_compatibility_demo.py
(+2814 files in other folders)
