[project]
name = "agent-hypervisor"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "fastapi",
    "uvicorn",
    "jsonschema",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
awc = "agent_hypervisor.compiler.cli:main"
ahc = "agent_hypervisor.compiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/agent_hypervisor"]
